# class-notes-rag

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  app_streamlit.py  pyproject.toml
app/: retriever.py
deployment/: Dockerfile
docs/: Research-Assistant-Capstone.pptx  cert-capstone-build-prompt.md  cert-capstone-design.md  decisions.md  demo-script.md  design-decision-qa.md  design.md  presentation-outline.md  recording-run-sheet.md  submission-post.md
docs/_archive/: docker-compose.yml  schema.sql
docs/deck/: README.md  build_deck.js  package-lock.json
docs/scenes/: VOICE.md  scene01-hook.md  scene02-headline.md  scene03-architecture.md  scene04-agents.md  scene05-patterns.md  scene06-rag.md  scene07-live-demo.md  scene08-observability.md  scene09-evaluation.md  scene10-deployment.md  scene11-close.md
eval/: __init__.py  dataset.jsonl  results.md  run_eval.py
ingest/: chunker.py  embedder.py
knowledge_base/: manifest.json
scripts/: download_corpus.py
src/: cli.py  config.py  main.py  pipeline.py
src/agents/: __init__.py  agent.py  orchestrator.py  researcher.py  review_gate.py  reviewer.py
src/observability/: __init__.py  phoenix_setup.py  plugin.py
src/rag/: chunker.py  embedder.py  retriever.py
src/tools/: rag_search.py  web_search.py
ui/: Dockerfile  app_streamlit.py  requirements.txt
