[project]
name = "class-notes-rag"
version = "0.1.0"
description = "RAG over Agentic AI Bootcamp transcripts."
requires-python = ">=3.11"
dependencies = [
    # Gemini SDK added Day 3 (exact package name + pin verified at install).
    "voyageai>=0.3",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
    "tiktoken>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
