[project]
name = "research-assistant"
version = "0.1.0"
description = "Multi-agent Research Assistant (Google ADK) over AI/ML papers (RAG) + live web search."
requires-python = ">=3.11"
dependencies = [
    # Agent framework + LLM/embeddings (Google-native, per cert rubric)
    "google-adk>=2.2",
    "google-genai>=2.8",
    # RAG: PDF extraction + on-disk vector index
    "pypdf>=5.0",
    "faiss-cpu>=1.9",
    "tiktoken>=0.8",          # token-window chunking fallback
    # Web search tool
    "tavily-python>=0.5",
    # Serving
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Demo UI + config
    "streamlit>=1.40",
    "python-dotenv>=1.0",
    "requests>=2.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]
eval = [
    "arize-phoenix>=17.5.0",
    "arize-phoenix-otel>=0.16.1",
    "langchain<1",
    "langchain-community<0.4",
    "langchain-core<1",
    "langchain-google-vertexai>=2.0.22",
    "langchain-openai<1",
    "openinference-instrumentation-google-adk>=0.1.15",
    "ragas>=0.4.3",
]

[tool.uv]
# Run-from-root src/ layout; uv manages deps but doesn't build/install this project itself.
package = false

[tool.ruff]
line-length = 100
